--- a/src/main/frontend/src/styles/ImageSlider.css
+++ b/src/main/frontend/src/styles/ImageSlider.css
@@ -69,6 +69,8 @@
 }
 
 .slider-button {
+  transition: all 0.3s ease;
+  opacity: 0;
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
@@ -81,6 +83,10 @@
   height: 50px;
   border-radius: 50%;
   z-index: 7;
+}
+
+.slider-container:hover .slider-button {
+  opacity: 1;
 }
 
 .slider-button:hover {
