--- a/src/main/frontend/src/styles/branchList.css
+++ b/src/main/frontend/src/styles/branchList.css
@@ -13,7 +13,7 @@
     width: 100%;
     max-width: calc(100% - 100px);
     margin: 0 auto;
-    gap: 44px;
+    gap: 30px;
 }
 
 .branchList_container .inner h1 {
@@ -83,6 +83,10 @@
     background-color: var(--white-color);
     z-index: 1;
     padding-right: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: start;
+    gap: 10px;
 }
 
 .branchList_container .inner ul li.branch_item .branch_item_title .branch_item_title_tit .gym_name {
@@ -98,7 +102,6 @@
     color: var(--black-color);
     background-color: var(--white-color);
     z-index: 1;
-    padding-right: 20px;
 }
 
 .branchList_container .inner ul li.branch_item .branch_item_title .branch_item_title_more {
@@ -106,7 +109,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #fe6c2e;
+    background-color: var(--black-color);
     border-radius: 50%;
     width: 44px;
     height: 44px;
@@ -115,7 +118,7 @@
     z-index: 1;
 }
 .branchList_container .inner ul li.branch_item .branch_item_title .branch_item_title_more:hover {
-    background-color: var(--black-color);
+    background-color: #fe6c2e;
     transform: translate(15%, -15%)
 }
 
@@ -133,6 +136,14 @@
     color: var(--black-color);
     text-align: left;
 }   
+
+.branchList_container .inner ul li.branch_item .branch_info .owner_name {
+    display: flex;
+    align-items: end;
+    justify-content: start;
+    font-size: 21px;
+    font-weight: 700;
+}
 
 .branchList_container .inner ul li.branch_item .branch_info .address {
     font-size: 16px;
@@ -187,7 +198,46 @@
     display: block;
 }
 
-.branchList_container .inner ul li.branch_item .branch_info .owner_name {
-    font-size: 18px;
-    font-weight: 600;
+.branchList_container .section_title {
+    font-size: 44px;
+    font-weight: bold;
+    color: var(--black-color);
+    text-align: center;
+    margin-bottom: 0;
+    margin-top: 64px;
+}
+
+.branchList_container .tabs {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 44px;
+    gap: 10px;
+}
+
+.branchList_container .tabs button {
+    padding: 12px 24px;
+    border-radius: 0;
+    border: 1px solid #e0e0e0;
+    border-radius: 35px;
+    background-color: var(--white-color);   
+    color: var(--black-color);
+    cursor: pointer;
+    font-size: 16px;
+    font-weight: 500;
+    transition: all 0.3s ease;
+}
+.branchList_container .tabs button~button {
+    border-left: 0px;
+}
+.branchList_container .tabs button:hover {
+    background-color: #fe6c2e;
+    border-color: transparent;
+    color: var(--white-color);
+}
+
+.branchList_container .tabs button.active {
+    background-color: var(--black-color);
+    color: var(--white-color);
+    border-color: transparent;
 }
