--- a/src/main/frontend/src/styles/JoinForm.css
+++ b/src/main/frontend/src/styles/JoinForm.css
@@ -1,10 +1,9 @@
 .join-form {
   max-width: 400px;
   margin: 0 auto;
-  padding: 20px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  background-color: #f9f9f9;
+  border: 1px solid #e4e4e4;
+  border-radius: 15px;
+  background-color: var(--white-color);
 }
 
 .join-form h2 {
