--- a/src/main/frontend/src/styles/subHeader.css
+++ b/src/main/frontend/src/styles/subHeader.css
@@ -6,6 +6,8 @@
 
 .subHeader_container {
     background-color: #cccccc;
+    position: relative;
+    overflow: hidden;
     width: 100%;
     border-radius: 35px;
     background-image: url('../../public/images/background_img.png');
@@ -15,6 +17,7 @@
     justify-content: center;
     align-items: center;
     height: 450px;
+    background-size: cover;
 }
 
 .subHeader_container .inner {
@@ -31,12 +34,14 @@
     font-weight: 900;
     color: var(--black-color);
     text-align: center;
+    z-index: 2;
 } 
 
 .subHeader_line {
     width: 40px;
     height: 2px;
     background-color: var(--black-color);
+    z-index: 2;
 }
 
 .subHeader_desc {
@@ -45,8 +50,18 @@
     font-weight: 300;
     color: var(--black-color);
     text-align: center;
+    z-index: 2;
 }
 
+.subHeader_background_img { 
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: auto;
+    height: 200%;
+    z-index: 1;
+}
 
 
 
