--- a/src/main/frontend/src/styles/main.css
+++ b/src/main/frontend/src/styles/main.css
@@ -6,6 +6,8 @@ License: none (public domain)
 :root {
     --black-color: #1f1f1f;
     --white-color: #fff;
+    --point-color: #fe6c2e;
+    --gray-color: #a8a8a8;
   }
 
 @import url('../assets/fonts/pretendard.css');
@@ -84,88 +86,6 @@ body {
   height: 100%;
 }
 
-nav.main_nav {
-    position: relative;
-    background-color: var(--white-color);
-    height: 95px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 10;
-}
-nav.main_nav.fixed {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    height: 95px;
-    z-index: 10;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-}
 
-nav.main_nav ul {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    list-style-type: none;
-    padding: 0;
-}
-
-nav.main_nav ul li {
-  display: block;
-}
-
-nav.main_nav ul li a {
-    display: block;
-    padding: 10px 20px;
-    color: var(--black-color);
-    text-decoration: none;
-    font-size: 18px;
-} 
-nav.main_nav ul li a:hover {
-    transition: all 0.3s ease;
-    font-weight: 800;
-}
-nav.main_nav ul li a:active {
-    transform: translateY(10px) 
-}
-
-nav.main_nav ul li.logo {
-    padding: 0 80px;
-}
-nav.main_nav ul li.logo a {
-    padding: 0;
-}
-
-nav.main_nav ul li.logo img {
-    width: 100%;
-    height: 100%;
-    object-fit: contain;
-}
-
-
-.login_btn {
-    position: absolute; 
-    right: 100px;
-    top: 50%;
-    transform: translateY(-50%);
-    font-family: 'Pretendard', sans-serif;
-    font-size: 14px;
-    letter-spacing: -.5px;
-    cursor: pointer;
-    padding: 7px 20px;
-    border-radius: 20px;
-    border: 1px solid var(--black-color);
-}
-
-.login_btn:hover {
-    transition: all 0.3s ease;
-    background-color: var(--black-color);
-    color: var(--white-color);
-}
-
-.login_form {
-    display: none;
-}
 
 
