--- a/src/main/frontend/src/styles/main.css
+++ b/src/main/frontend/src/styles/main.css
@@ -7,7 +7,7 @@ License: none (public domain)
     --black-color: #1f1f1f;
     --white-color: #fff;
     --point-color: #fe6c2e;
-    --gray-color: #a8a8a8;
+    --gray-color: #dbdbdb;
   }
 
 @import url('../assets/fonts/pretendard.css');
@@ -86,6 +86,18 @@ body {
   height: 100%;
 }
 
+.thin {
+  font-weight: 100;
+}
 
+.bold {
+  font-weight: 700;
+}
 
+.small {
+  font-size: .9em;
+}
 
+.medium {
+  font-size: 1.2em;
+}
