--- a/src/main/frontend/src/styles/navbar.css
+++ b/src/main/frontend/src/styles/navbar.css
@@ -1,4 +1,5 @@
 nav.main_nav {
+    transition: all 0.3s ease;
     position: relative;
     background-color: var(--white-color);
     height: 95px;
