--- a/src/main/frontend/src/styles/news.css
+++ b/src/main/frontend/src/styles/news.css
@@ -86,7 +86,7 @@
 
 .news-container .board-list .post-item .post-contents {
   width: 100%;
-  height: 100%;
+  height: auto;
   padding: 10px 24px 44px;
 }
 
