--- a/src/main/frontend/src/styles/Order.css
+++ b/src/main/frontend/src/styles/Order.css
@@ -474,8 +474,9 @@
 }
 
 .item-image {
-  width: 60px;
-  height: 60px;
+  width: 100%;
+  height: auto;
+  aspect-ratio: 1/1;
   object-fit: cover;
   border-radius: 5px;
   margin-right: 15px;
