--- a/src/main/frontend/src/styles/branchesDetail.css
+++ b/src/main/frontend/src/styles/branchesDetail.css
@@ -14,7 +14,7 @@
     position: relative;
     width: 100%;
     height: 100%;
-    min-height: 400px;
+    min-height: 450px;
     border-radius: 35px;;
     background-color: var(--black-color);
     background-position: center;
@@ -152,12 +152,15 @@
 }
 
 .branchDetail_header .branchInfo .ownerImage {
-  width: 300px;
-  height: auto;
+  width: 100%;
+  max-width: 300px;
+  height: 100%;
+  max-height: 400px;
   margin-bottom: -5px;
 }
 .branchDetail_header .branchInfo .ownerImage img {
-    filter: drop-shadow(0px 6px 12px var(--black-color));
+    width: 100%;
+    height: 100%;
 }
 
 .branchDetail_content {
@@ -168,13 +171,38 @@
 
 .branchDetail_content .branchDetail_content_inner {
     width: 100%;
+    max-width: 1200px;
+    height: 100%;
+    margin: 0 auto;
+}   
+.branchDetail_content .branch_title {
+    width: 100%;
+    height: 100%;
+    text-align: left;
+}       
+
+.branchDetail_content .branch_title .stit {
+    font-size: 16px;
+    font-weight: 400;
+    color: var(--black-color);
+    
+}       
+.branchDetail_content .branch_title .btit {
+    font-size: 32px;
+    font-weight: 700;
+    color: var(--black-color);
+}
+
+.branchDetail_content .contents {
+    width: 100%;
     height: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
     padding: 50px;
+    margin: 0 auto;
     gap: 50px;
-}   
+}
 
 .branchDetail_content .branchDetail_content_title {
     width: 100%;
@@ -218,6 +246,97 @@
     padding: 6px 14px;
     margin-left: -4px;
 }   
+
+.coaches {
+    width: 100%;
+    height: 100%;
+    padding: 50px;
+}   
+
+.coaches .coaches_inner {
+    max-width: 1200px;
+    width: 100%;
+    height: 100%;
+    margin: 0 auto;
+}       
+
+.coaches .coaches_title {
+    width: 100%;
+    height: 100%;
+    text-align: left;
+}       
+
+.coaches .coaches_title .stit {
+    font-size: 16px;
+    font-weight: 400;
+    color: var(--black-color);
+    
+}       
+.coaches .coaches_title .btit {
+    font-size: 32px;
+    font-weight: 700;
+    color: var(--black-color);
+}       
+
+.coaches .coaches_list {
+    width: 100%;
+    height: 100%;
+}   
+
+.coaches .coaches_list ul {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+    margin-top: 34px;
+}
+
+.coaches .coaches_list ul li {
+    width: 33.33%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 14px;
+}
+
+.coaches .coaches_list ul li .thumnail {
+    width: 100%;
+    aspect-ratio: 1/1;
+    height: auto;
+    border-radius: 30px;
+    background-color: var(--gray-color);
+}
+
+.coaches .coaches_list ul li .thumnail img {
+    width: 100%;
+    height: 100%;
+}   
+
+.coaches .coaches_list ul li .coach_info {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.coaches .coaches_list ul li .coach_info .coach_name {
+    font-size: 18px;
+    font-weight: 700;
+    color: var(--black-color);
+}
+
+.coaches .coaches_list ul li .coach_info .coach_belt {
+    font-size: 14px;
+    font-weight: 400;
+    color: var(--black-color);
+}
+
 
 
 
