--- a/src/main/frontend/src/styles/branchesDetail.css
+++ b/src/main/frontend/src/styles/branchesDetail.css
@@ -337,6 +337,37 @@
     color: var(--black-color);
 }
 
+.branch_container {
+    width: 100%;
+    height: 100%;
+    padding: 50px;
+}
+
+.branch_container .branch_inner {   
+    max-width: 1200px;
+    width: 100%;
+    height: 100%;
+    margin: 0 auto;
+}
+
+.branch_container .branch_board_title {
+    width: 100%;
+    height: 100%;
+    text-align: left;
+}
+
+.branch_container .branch_board_title .stit {
+    font-size: 16px;
+    font-weight: 400;
+    color: var(--black-color);
+}   
+
+.branch_container .branch_board_title .btit {
+    font-size: 32px;
+    font-weight: 700;
+    color: var(--black-color);
+}   
+
 
 
 
