--- a/src/main/frontend/src/styles/branchesDetail.css
+++ b/src/main/frontend/src/styles/branchesDetail.css
@@ -1,3 +1,7 @@
+:root {
+    --branch-board-width: 1400px;
+}
+
 .branchDetail_container {
     width: 100%;
     height: 100%;
@@ -171,7 +175,7 @@
 
 .branchDetail_content .branchDetail_content_inner {
     width: 100%;
-    max-width: 1200px;
+    max-width: var(--branch-board-width);
     height: 100%;
     margin: 0 auto;
 }   
@@ -254,7 +258,7 @@
 }   
 
 .coaches .coaches_inner {
-    max-width: 1200px;
+    max-width: var(--branch-board-width);
     width: 100%;
     height: 100%;
     margin: 0 auto;
@@ -344,7 +348,7 @@
 }
 
 .branch_container .branch_inner {   
-    max-width: 1200px;
+    max-width: var(--branch-board-width);
     width: 100%;
     height: 100%;
     margin: 0 auto;
@@ -368,10 +372,21 @@
     color: var(--black-color);
 }   
 
-
-
+.branch_container .branch_inner .content {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: start;
+    justify-content: space-between;
+    gap: 50px;
+    margin-top: 50px;
+}
+.branch_container .branch_inner .content .board_list {
+    width: 100%;
+    height: 100%;
+}
 
 .branchDetail_content .branchDetail_content_text {
     width: 100%;
     height: 100%;
-}           
+}    
